--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>redis-demo</module>
+        <module>redis-example</module>
     </modules>
 
     <!--公共的版本号管理-->
@@ -24,6 +25,7 @@
         <taglibs.version>1.1.2</taglibs.version>
         <c3p0.version>0.9.5.2</c3p0.version>
         <mysql.version>5.1.35</mysql.version>
+        <mysql.version>8.0.12</mysql.version>
     </properties>
 
 
